'corrected spacing'

--- a/app/assets/stylesheets/globals/homepage.css.scss
+++ b/app/assets/stylesheets/globals/homepage.css.scss
@@ -508,7 +508,7 @@
 
         /* FLoating Navigation on Homepage */
         #homenav {
-            top: 18em;
+            top: 22em;
         }
     }/* END: Desktop ---------- */
 }
